[gd_scene load_steps=15 format=3 uid="uid://b4d2hkxaj1tsn"]

[ext_resource type="Script" path="res://scripts/GameSetUp.gd" id="1_4qods"]
[ext_resource type="Script" path="res://scripts/CardManager.gd" id="1_ipcm4"]
[ext_resource type="PackedScene" uid="uid://cvtstd64rchqx" path="res://scenes/CardSlot.tscn" id="2_n8h10"]
[ext_resource type="Script" path="res://scripts/MonsterCardSlot.gd" id="3_7r3cp"]
[ext_resource type="Script" path="res://scripts/AbilityCardSlot.gd" id="4_ju2k3"]
[ext_resource type="Script" path="res://scripts/PlayerHand.gd" id="5_4uouj"]
[ext_resource type="Script" path="res://scripts/Deck.gd" id="6_p25nm"]
[ext_resource type="Texture2D" uid="uid://cmf3bekqwgps1" path="res://assets/real_deck.png" id="7_axdo0"]
[ext_resource type="Script" path="res://scripts/InputManager.gd" id="8_0j6co"]
[ext_resource type="Script" path="res://scripts/BattleManager.gd" id="9_amdh3"]
[ext_resource type="FontFile" uid="uid://bcq55rv6noy7b" path="res://Tiny5-Regular.ttf" id="10_475c7"]
[ext_resource type="Texture2D" uid="uid://bqigo1pwbcjia" path="res://assets/CardSlot.png" id="11_1ksby"]
[ext_resource type="PackedScene" uid="uid://cb8vs4iqxx3fu" path="res://scenes/AnimationTornado.tscn" id="12_77dws"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ti4e"]
size = Vector2(224, 252)

[node name="PlayerField" type="Node2D"]
script = ExtResource("1_4qods")

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_ipcm4")

[node name="CardSlots" type="Node2D" parent="."]

[node name="CardSlot" parent="CardSlots" instance=ExtResource("2_n8h10")]
z_index = -3
position = Vector2(960, 754)
scale = Vector2(0.7, 0.7)

[node name="CardSlot2" parent="CardSlots" instance=ExtResource("2_n8h10")]
z_index = -3
position = Vector2(1160, 754)
scale = Vector2(0.7, 0.7)

[node name="CardSlot3" parent="CardSlots" instance=ExtResource("2_n8h10")]
z_index = -3
position = Vector2(1360, 754)
scale = Vector2(0.7, 0.7)

[node name="CardSlot4" parent="CardSlots" instance=ExtResource("2_n8h10")]
z_index = -3
position = Vector2(760, 754)
scale = Vector2(0.7, 0.7)

[node name="CardSlot5" parent="CardSlots" instance=ExtResource("2_n8h10")]
z_index = -3
position = Vector2(560, 754)
scale = Vector2(0.7, 0.7)

[node name="CardSlot6" parent="CardSlots" instance=ExtResource("2_n8h10")]
z_index = -3
position = Vector2(960, 554)
scale = Vector2(0.7, 0.7)
script = ExtResource("3_7r3cp")

[node name="CardSlot7" parent="CardSlots" instance=ExtResource("2_n8h10")]
z_index = -3
position = Vector2(1160, 554)
scale = Vector2(0.7, 0.7)
script = ExtResource("3_7r3cp")

[node name="CardSlot8" parent="CardSlots" instance=ExtResource("2_n8h10")]
z_index = -3
position = Vector2(1360, 554)
scale = Vector2(0.7, 0.7)
script = ExtResource("3_7r3cp")

[node name="CardSlot9" parent="CardSlots" instance=ExtResource("2_n8h10")]
z_index = -3
position = Vector2(760, 554)
scale = Vector2(0.7, 0.7)
script = ExtResource("3_7r3cp")

[node name="CardSlot10" parent="CardSlots" instance=ExtResource("2_n8h10")]
z_index = -3
position = Vector2(560, 554)
scale = Vector2(0.7, 0.7)
script = ExtResource("3_7r3cp")

[node name="CardSlot11" parent="CardSlots" instance=ExtResource("2_n8h10")]
z_index = -3
position = Vector2(360, 655)
scale = Vector2(0.7, 0.7)
script = ExtResource("4_ju2k3")

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("5_4uouj")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(140, 955)
scale = Vector2(1.1, 1.1)
script = ExtResource("6_p25nm")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
z_index = -2
position = Vector2(3.12499, 5)
scale = Vector2(2.32692, 2.07317)
texture = ExtResource("7_axdo0")

[node name="Area2D" type="Area2D" parent="Deck"]
position = Vector2(1.52588e-05, -0.00012207)
scale = Vector2(0.8, 0.8)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_6ti4e")

[node name="RichTextLabel" type="RichTextLabel" parent="Deck"]
modulate = Color(0.20744, 0.311013, 0.068135, 1)
z_index = -2
offset_left = -9.0
offset_top = -28.0
offset_right = 31.0
offset_bottom = 12.0
scale = Vector2(0.8, 0.8)
text = "0"
metadata/_edit_use_anchors_ = true

[node name="DeckTimer" type="Timer" parent="Deck"]

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("8_0j6co")

[node name="EndTurnButton" type="Button" parent="."]
visible = false
offset_left = 250.0
offset_top = 410.0
offset_right = 328.0
offset_bottom = 441.0
disabled = true
text = "End Turn"

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("9_amdh3")

[node name="BattleTimer" type="Timer" parent="."]

[node name="PlayerHealth" type="RichTextLabel" parent="."]
offset_left = 130.0
offset_top = 530.0
offset_right = 170.0
offset_bottom = 570.0
scale = Vector2(2, 2)
theme_override_fonts/normal_font = ExtResource("10_475c7")
text = "0"

[node name="PlayerDiscard" type="Node2D" parent="."]
z_index = -3
position = Vector2(1610, 650)
scale = Vector2(0.7, 0.7)

[node name="Sprite2D" type="Sprite2D" parent="PlayerDiscard"]
position = Vector2(-0.372095, 6.42863)
scale = Vector2(1.237, 0.9)
texture = ExtResource("11_1ksby")

[node name="AnimationTornado" parent="." instance=ExtResource("12_77dws")]
visible = false
